package domain.models

class Discount(var value: Int) {
}